Closed Bug 1057716 Opened 11 years ago Closed 11 years ago

[OMTC] Popping shadows

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla34
Tracking Status
firefox31 --- unaffected
firefox32 --- unaffected
firefox33 + verified
firefox34 + verified

People

(Reporter: elbart, Assigned: jrmuizel)

References

()

Details

Attachments

(5 files, 1 obsolete file)

Attached video screencap.mp4
Moving the mouse over the titles under "Recent Threads" on the right side opens an animated preview-balloon with a shadow-effect. In about every other try, the shadow has some sort of popping-effect shortly before the animation is finished. Doesn't happen with OMTC disabled. Application Basics ------------------ Name: Firefox Version: 34.0a1 User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:34.0) Gecko/20100101 Firefox/34.0 Multiprocess Windows: 0/1 Graphics -------- Adapter Description: NVIDIA GeForce GT 640 Adapter Drivers: nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um Adapter RAM: 2048 ClearType Parameters: Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 200 Device ID: 0x0fc1 Direct2D Enabled: true DirectWrite Enabled: true (6.2.9200.16571) Driver Date: 7-2-2014 Driver Version: 9.18.13.4052 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC) Subsys ID: 125819da Vendor ID: 0x10de WebGL Renderer: Google Inc. -- ANGLE (NVIDIA GeForce GT 640 Direct3D9Ex vs_3_0 ps_3_0) windowLayerManagerRemote: true AzureCanvasBackend: direct2d AzureContentBackend: direct2d AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0 Important Modified Preferences ------------------------------ gfx.direct3d.last_used_feature_level_idx: 0
Blocks: 899785
Assignee: nobody → bas
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Jeff, can you take this on to speed up OMTC blockers resolution?
Assignee: bas → jmuizelaar
Blocks: 1036457
Flags: needinfo?(jmuizelaar)
I can't seem to reproduce this on Intel hardware.
Flags: needinfo?(jmuizelaar)
Attached image before.png
Attached image during.png
Attached image after.png
I just confirmed that running the same apitrace that reproduces the problem on an nvidia driver does not reproduce the problem on WARP
The difference seems to be the results of a RenderTarget after a CopySubresourceRegion call.
Interestingly enough the CopySubresourceRegion call doesn't seem to be actually copying the background into the resource as we would expect it to.
Attached patch This might help (obsolete) — Splinter Review
(In reply to Jeff Muizelaar [:jrmuizel] from comment #9) > Created attachment 8478559 [details] [diff] [review] > This might help I had to make some adjustments to make it build and not crash. But it at least doesn't seem to be solving the problem for me. Interestingly the bug I'm looking at is also NVidia only, and -also- CopySubresourceRegion related. But in the case of what I'm looking at it didn't feel that CopySubResourceRegion wasn't working. But maybe that idea is wrong.
This should do the trick
Attachment #8478559 - Attachment is obsolete: true
Attachment #8479031 - Flags: review?(bas)
Comment on attachment 8479031 [details] [diff] [review] Don't use a zero sized box to copy the background Review of attachment 8479031 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/d3d11/CompositorD3D11.cpp @@ +450,5 @@ > srcBox.top = aSourcePoint.y; > srcBox.front = 0; > srcBox.right = aSourcePoint.x + aRect.width; > srcBox.bottom = aSourcePoint.y + aRect.height; > + srcBox.back = 1; I bow my head in shame for r+'ing this.
Attachment #8479031 - Flags: review?(bas) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
This just landed on m-c. Assuming the fix is good, please request approval to uplift to 33.
Jeff, could you fill the uplift request for 33? Thanks
Flags: needinfo?(jmuizelaar)
Comment on attachment 8479031 [details] [diff] [review] Don't use a zero sized box to copy the background This is for the uplift to 33, which by now is Beta? Either way, this only needs to make it to 33. Approval Request Comment [Feature/regressing bug #]: 899785 [User impact if declined]: Intermittent correctness problems on Nvidia/Windows. [Describe test coverage new/current, TBPL]: [Risks and why]: Low. [String/UUID change made/needed]: n/a
Attachment #8479031 - Flags: approval-mozilla-beta?
Attachment #8479031 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Contact: florin.mezei
Flags: needinfo?(jmuizelaar)
Couldn't reproduce this issue on Nightly 2014-08-23 nor 2014-08-25 with STR from comment 0 on 4 different Windows 7 64-bit machines - 1 AMD and 3 nVidia (NVIDIA GeForce 210 and NVIDIA GeForce GT 620). I see no difference between those Nightly builds and latest Nightly 35.0a1 (Build ID: 20140910030204) or Firefox 33 beta 2 (Build ID: 20140908190852). Am I missing something here? Elbart, could you please look into this with Firefox 33 beta 2 [1]? Is this issue still reproducible for you? Thanks in advance! [1] - http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/33.0b2-candidates/build1/win32/en-US/
Flags: needinfo?(elbart)
(In reply to Alexandra Lucinet, QA Mentor [:adalucinet] from comment #19) > Is this > issue still reproducible for you? No.
Flags: needinfo?(elbart)
Elbart, I need your help again. Could you please verify this fix on latest Aurora 34.0a2 [1] too? Many thanks! [1] http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-aurora/
Flags: needinfo?(elbart)
(In reply to Alexandra Lucinet, QA Mentor [:adalucinet] from comment #21) > Could you please verify this fix on latest > Aurora 34.0a2 [1] too? Yes, fixed.
Flags: needinfo?(elbart)
Status: RESOLVED → VERIFIED
Depends on: 1082660
Depends on: 1064864
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: