Bug 1057716 - d3d11: Properly copy the background. r=bas, a=sledru

Previously we were copying an empty box.